hphp/test/zend/good/ext/curl/tests/bug62839.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("curl")) print "skip"; 
}
