hphp/test/zend/bad/ext/curl/tests/curl_basic_013.php.skipif
<?php if (!extension_loaded("curl") || false === getenv(b'PHP_CURL_HTTP_REMOTE_SERVER')) print "skip"; ?>